# market-fiyati-mcp-server

./: README.md  pyproject.toml
src/market_fiyati_mcp_server/: server.py
src/market_fiyati_mcp_server/market_fiyati_client/: __init__.py  api_client.py  categories.json  models.py
