[project]
name = "market-fiyati-mcp-server"
version = "0.2.4"
description = "MCP server for marketfiyati.org.tr/"
authors = [
    {name = "Mehmetcan Bozkuş", email = "mtcnbzks@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.12.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]

[project.urls]
Homepage = "https://mcp-demo-landing-page.vercel.app/"
Documentation = "https://github.com/mtcnbzks/market-fiyati-mcp-server"
Repository = "https://github.com/mtcnbzks/market-fiyati-mcp-server"

[project.scripts]
market-fiyati-mcp-server = "market_fiyati_mcp_server.server:main"
